# AOS-Brain

./: .gitignore  AGENTS.md  AGENTS_V2.md  AGENT_ARCHITECTURE_HIERARCHY.md  AGENT_SKILL_DISTRIBUTION.md  AGENT_SKILL_MATRIX_COMPLETE.md  AOCROS_KERNEL_ANALYSIS.md  AOCROS_STRATEGIC_ASSESSMENT.md  BEAST_OVERVIEW_DOCUMENT.txt  BOOTSTRAP.md  BRAIN_MEMORY_FIX_COMPLETE.md  BRAIN_MERGE_ANALYSIS.md  BRAIN_SKILLS_ARCHITECTURE.md  BRAIN_STATUS_RECOVERY.md  CLEANUP_INVENTORY_2026-03-16.md  COMPLETION_STATUS.md  FIXES_APPLIED_20260409.md  HEARTBEAT.md  HOSTINGER_SSL_SETUP.md  IDENTITY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  INSTALL_AND_README.md  INTEGRATION_PLAN.md  JORDAN_HANDOFF_AOS_H1.md  MEMORY.md  MERGE_ARCHITECTURE.md  MORTIMER_LEARNING_COMPLETE.md  MULTI_TRACK_EXECUTION_SUMMARY.md  PROPOSED_REDESIGN.md  README.md  RISK_ASSESSMENT.md  SOUL.md  SSL_SETUP_GUIDE.md  TASKS_END_OF_NIGHT.md  TOOLS.md  USER.md  VERSION_INDEX.md  academy_feeder.py  activate_all_employees.sh  (+64 more)
.clawhub/: lock.json
.openclaw/: workspace-state.json
AGI_COMPANY/: BRAIN_ARCHITECTURE_COMPARISON.md  MIGRATION_GUIDE.md  MORTIMER_RECOVERY_PACKAGE.md  MORTIMER_VPS_FULL_EXTRACTION.md  README.md  SESSION_SUMMARY_2026-03-29.md  TRADING_BOT_EMAIL_INSTRUCTIONS.md
AGI_COMPANY_WEBSITE_REBUILD/: README.md  WEBSITE_BUILD_TEMPLATE.md  WEBSITE_QUESTIONNAIRE.md  agents.html  cream.html  index.html  live_demo.html  rs79.html
AOS/: install_aos_lite_termux.sh  start_brain.sh
AOS-H1/: README.md
AOS-Lite/: package.json
TAPPYLEWIS_REBUILD/: index.html  verse.html
agent_profiles/: activate_patricia.sh  patricia_DMAIC_BRIEFING.md  patricia_PROFILE.md
aos_brain/: CMakeLists.txt
aos_brain/brain/: brain_server.hpp  seven_region_brain.cpp  seven_region_brain.hpp
aos_brain/core/: cortical_sheet.cpp  cortical_sheet.hpp
aos_brain_py/: ARCHITECTURE.md  GITHUB_INSTALL.md  README.md  VERSION.md  activate_agi_products.py  activate_apex_executives.py  activate_c3po_r2_companion.py  activate_clerk.py  activate_complete_secretarial_line.py  activate_life_systems.py  activate_myl0n_secretarial.py  activate_remaining_agents.py  activate_secretarial_pool.py  add_hermes_miniagent_skills.py  agent_audit.py  agent_audit_v2.py  agent_status_api.py  assign_all_agents_to_work.py  bhsi.py  body_adapter.py  brain_client.py  brain_daemon.py  browser_lead_scraper.py  check_email.py  check_minimax_activation.py  check_mylonen_r2.py  commoditize_ledger.py  complete_brain_demo.py  diagnose_scraper.py  enhanced_phone_login.py  full_body_integration_demo.py  identify_api_key.py  install_all_skills.py  jordan_profile_manager.py  lead_scraper_browser.js  north_america_scraper.js  phone_login_web.py  (+19 more)
(+2231 files in other folders)
